LD_AUO: initial conversion

--- a/configs/misc/factory.ini
+++ b/configs/misc/factory.ini
@@ -1,56 +1,54 @@
 // test item and test flow configuration
-MenuItem=掳麓录眉(M);
-MenuItem=鹿矛录拢脟貌(M);
-MenuItem=鹿芒脩搂脢脰脰赂碌录潞陆录眉(M);
-MenuItem=麓楼脙镁脝脕(M);
-MenuItem=麓楼脙镁脝脕脳脭露炉虏芒脢脭;
-MenuItem=LCM虏芒脢脭;
-MenuItem=卤鲁鹿芒碌脠录露(M);
+MenuItem=按键(M);
+MenuItem=轨迹球(M);
+MenuItem=光学手指导航键(M);
+MenuItem=触摸屏(M);
+MenuItem=触摸屏自动测试;
+MenuItem=LCM测试;
+MenuItem=背光等级(M);
 MenuItem=eMMC(A);
-MenuItem=脧脭脢戮脝脕(M);
-MenuItem=NAND脡脕麓忙(A);
-MenuItem=麓忙麓垄驴篓(A);
-MenuItem=SIM驴篓脤陆虏芒(A);
-MenuItem=脨脜潞脜虏芒脢脭(M);
-MenuItem=脮帽露炉脝梅(M);
-MenuItem=LED碌脝(M);
-MenuItem=脢碌脢卤脢卤脰脫(A);
-MenuItem=禄脴脗路(A);
-MenuItem=脣芦脗贸驴脣路莽禄脴脗路(M);
-MenuItem=禄脴脗路(脢脰禄煤脗贸驴脣路莽-脩茂脡霉脝梅)(A);
-MenuItem=脢脰禄煤脗贸驴脣脩茂脡霉脝梅禄脴脗路(A);
-MenuItem=脕氓脡霉(A);
-MenuItem=陆脫脢脮脝梅(A);
-MenuItem=Wave禄脴路脜(M);
-MenuItem=脩茂脡霉脝梅OC虏芒脢脭(M);
-MenuItem=露煤禄煤(A);
-MenuItem=录脫脣脵露脠麓芦赂脨脝梅(M);
-MenuItem=录脫脣脵露脠麓芦赂脨脝梅脨拢脳录(M);
-MenuItem=麓脜脕娄录脝麓芦赂脨脝梅(M);
-MenuItem=鹿芒麓芦赂脨脝梅戮脿脌毛麓芦赂脨脝梅(M);
-MenuItem=脥脫脗脻脪脟麓芦赂脨脝梅(M);
-MenuItem=脥脫脗脻脪脟麓芦赂脨脝梅脨拢脳录(M);
-MenuItem=脝酶脩鹿麓芦赂脨脝梅(M);
-MenuItem=脰梅脮脮脧脿禄煤(A);
-MenuItem=赂卤脮脮脧脿禄煤(A);
-MenuItem=脡脕鹿芒碌脝(M);
-MenuItem=GPS露篓脦禄(A);
-MenuItem=陆眉鲁隆脥篓脨脜NFC(A);
-MenuItem=Fingerprint(A);
-MenuItem=FM脢脮脪么禄煤(A);
-MenuItem=FM路垄脡盲脝梅(M);
-MenuItem=脌露脩脌(A);
+MenuItem=显示屏(M);
+MenuItem=NAND闪存(A);
+MenuItem=存储卡(A);
+MenuItem=SIM卡探测(A);
+MenuItem=信号测试(M);
+MenuItem=振动器(M);
+MenuItem=LED灯(M);
+MenuItem=实时时钟(A);
+MenuItem=回路(A);
+MenuItem=双麦克风回路(M);
+MenuItem=回路(手机麦克风-扬声器)(A);
+MenuItem=手机麦克扬声器回路(A);
+MenuItem=铃声(A);
+MenuItem=接收器(A);
+MenuItem=Wave回放(M);
+MenuItem=扬声器OC测试(M);
+MenuItem=耳机(A);
+MenuItem=加速度传感器(M);
+MenuItem=加速度传感器校准(M);
+MenuItem=磁力计传感器(M);
+MenuItem=光传感器距离传感器(M);
+MenuItem=陀螺仪传感器(M);
+MenuItem=陀螺仪传感器校准(M);
+MenuItem=气压传感器(M);
+MenuItem=主照相机(A);
+MenuItem=副照相机(A);
+MenuItem=闪光灯(M);
+MenuItem=GPS定位(A);
+MenuItem=近场通信NFC(M);
+MenuItem=FM收音机(A);
+MenuItem=FM发射器(M);
+MenuItem=蓝牙(A);
 MenuItem=Wi-Fi(A);
-MenuItem=脢脰禄煤碌莽脢脫(A);
-MenuItem=脪脝露炉碌莽脢脫(A);
-MenuItem=碌莽鲁脴潞脥鲁盲碌莽(A);
-MenuItem=脧脨脰脙碌莽脕梅(M);
+MenuItem=手机电视(A);
+MenuItem=移动电视(A);
+MenuItem=电池和充电(A);
+MenuItem=闲置电流(M);
 MenuItem=HDMI(A);
 MenuItem=BTS(A);
 MenuItem=RF Test(A);
 MenuItem=OTG(A);
 MenuItem=EFUSE(A);
-MenuItem=CAPSENSOR(A);
 
 //FM Radio
 FMRadio.CH1=885;
@@ -137,4 +135,3 @@ RF.rssi1.dbm=-80
 
 //AudioSpeakerFreq2K
 /res/sound/sinewave2k.wav
-
