--- a/rootdir/init.modem.rc
+++ b/rootdir/init.modem.rc
@@ -3,21 +3,7 @@
 # IMPORTANT: Do not create world writable files or directories.
 # This is a common source of Android security bugs.
 #
-
-on early-init
-    write /sys/class/net/ccmni0/queues/rx-0/rps_cpus "ff"
-    write /sys/class/net/ccmni1/queues/rx-0/rps_cpus "ff"
-    write /sys/class/net/ccmni2/queues/rx-0/rps_cpus "ff"
-    write /sys/class/net/ccmni0/queues/rx-0/rps_flow_cnt "1000"
-    write /sys/class/net/ccmni1/queues/rx-0/rps_flow_cnt "1000"
-    write /sys/class/net/ccmni2/queues/rx-0/rps_flow_cnt "1000"
-    setprop net.perf.tether.rps 0f
-    setprop net.perf.rps.default ff
-    setprop net.perf.tether.cpu.core 4,4,0,0
-    setprop net.perf.tether.cpu.freq 1144000,1144000,0,0
-    setprop net.perf.internal.cpu.core 2,2,0,0
-    setprop net.perf.internal.cpu.freq 819000,819000,0,0
-
+   
 on post-fs-data
 
     write /proc/bootprof "post-fs-data: on modem start"
@@ -25,6 +11,11 @@ on post-fs-data
     # Modem related device nodes
     mkdir /data/nvram/md  0770 root system
 
+#  Build-in Modified - S
+#    insmod /vendor/lib/modules/ccci_plat.ko
+#    insmod /vendor/lib/modules/ccci.ko
+#  Build-in Modified - E
+#   chown radio radio /sys/class/BOOT/BOOT/boot/md
     chown radio radio /sys/kernel/ccci/boot
 
 #SeLinux
@@ -163,5 +154,4 @@ service terservice /vendor/bin/terservice
 
 on property:ril.muxreport=1
     start muxreport-daemon
-
 
