--- a/configs/misc/custom.conf
+++ b/configs/misc/custom.conf
@@ -23,14 +23,11 @@ rtsp_streaming.UserAgent = stagefright/1.2 (Linux;Android @ro.build.version.rele
 #rtsp_streaming.UAProfileURL = http://218.249.47.94/Xianghe/MTK_Athens15_UAProfile.xml
 dm.Manufacturer = MTK1
 dm.Model = MTK
-# BEGIN lenovo-sw yinzl1 IKANGEROW-365 2017/1/13
-bluetooth.HostName = @ro.product.model@
-# END lenovo-sw yinzl1 IKANGEROW-365 2017/1/13
+bluetooth.HostName = LEM7
 fmtransmitter.RDSValue = Mediatek
-wlan.SSID = AndroidAP
+wlan.SSID = LEM7
 Setting.Model=@ro.product.model@
 Setting.SWVerno= @ro.mediatek.version.release@
-
 
 
 
