--- a/configs/thermal/thermal.conf
+++ b/configs/thermal/thermal.conf
@@ -15,7 +15,7 @@ EYKW$<678)
 /qtrg4s slopnhv4s s"sqc0w#yy "
  !"
 /qtrg4s slopnhv4s s6cm/eghz7:
-EYKW$7678) 
+EYKW$:678) 
 /qtrg4s slopnhv4s s6cm/eghz79
 EYKW$7678) 
 /qtrg4s slopnhv4s s6cm/eghz78
@@ -39,9 +39,9 @@ PVRbV%9@8901"SYUe]WUT!3;45&V^NR`EUMYOJIU_M"76:7789 OVFcYGITN 7"3$%&'()
 /qtrg4jyq$es1wljxtiu/u!exxvhgyascp
 PVRbV%9@8901"SYUe]WUT!3;45&V^NR`EUMYOJIU_M"76:7789 OVFcYGITN 7"4$%&'() 
 /qtrg4jyq$es1wljxtiu/dneghz
-0!4345&8:90!;84%&'() !"#$%&
+0!884%:<8)212#$%&'() !"#$
 /qtrg4jyq$es1wljxtiu/dndxrezm"tjpj
-0!3845&8=)31"4$=67(:512#656'>90!"#$%&'
+0!3845&8=)31"4$:;7(:512#656'>90!"#$%&'
 /qtrg4jyq$es1wljxtiu/dnpyyz
 1!634%778)112#656'990!48956'() !"#$%
 /qtrg4jyq$es1wljxtiu/dnfxr
@@ -57,7 +57,7 @@ PVRbV%9@8901"SYUe]WUT!3;45&V^NR`EUMYOJIU_M"76:7789 OVFcYGITN 7"4$%&'()
 /qtrg4jyq$es1wljxtiu/u!zqy
 1!354567(9 nvnxx"t!6szuuwy&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"5456'
 /qtrg4jyq$es1wljxtiu/u!exx
-6!;8456'8)mumwwug4 'ssuw$98789 1"pxp3jt6bdew47&:A901"3$rzr5ll.dfgy68(<5123$5&t!t-dn0fhi 89 78345&7(vtl/fp2hhktljikx59'==012#4%s s6cm/eehqsqphu25$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  2234%
+4!;8456'8)mumwwug4 'ssuw$:6789 1"pxp3jt6bdew47&;@901"3$rzr5ll.dfgy68(<4123$5&t!t-dn0fhi 89 1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$6678)
 /qtrg4jyq$es1wljxtiu/u!exxvh
 4!354567(9 nvn1hr4 quufr s69(?6:;<$5&t!t-dn0qzz 8; 76<=>&7(vtl/fp2s!!"02"96>?@(9 nvn1hr4u#tu23$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(:012#
 /qtrg4jyq$es1wljxtiu/u!ww6
@@ -87,5 +87,4 @@ mbaois&8() !"#$%&'()
 /qtrg4s s"z0owoyy:
 mbaois&8() !"#$%&'() 
 EPH
-
 
