Update rootdir with LEMX files for Edge

--- a/rootdir/init.connectivity.rc
+++ b/rootdir/init.connectivity.rc
@@ -11,6 +11,9 @@ on post-fs-data
     chmod 0660 /dev/ttyMT2
     chown system system /dev/ttyMT2
 
+#/dev/ttyMT1 for GPS 3337 usage
+    chmod 0660 /dev/ttyMT1
+    chown system system /dev/ttyMT1
 
 # GPS
     mkdir /data/gps_mnl 0771 gps system
@@ -22,6 +25,12 @@ on post-fs-data
     chown gps gps /sys/class/gpsdrv/gps/state
     chown gps gps /sys/class/gpsdrv/gps/pwrsave
     chown gps gps /sys/class/gpsdrv/gps/status
+
+# GPS EMI
+    chmod 666 /dev/gps_emi
+
+# AGPS
+    mkdir /data/agps_supl 0771 gps system
 
 # WiFi
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -37,7 +46,7 @@ on post-fs-data
 #
 
 
-on init
+on boot
 
 #
 # Connectivity related services (Begin)
@@ -59,8 +68,8 @@ on property:service.wcn.coredump.mode=2
 start stp_dump
 
 service stp_dump /vendor/bin/stp_dump3
-    user root
-    group root
+    user system
+    group system sdcard_rw sdcard_r media_rw
     class core
     disabled
     oneshot
@@ -83,6 +92,20 @@ service MPED /vendor/bin/MPED
 #    group gps system radio
 #    class main
 
+# AGPS
+service agpsd /vendor/bin/mtk_agpsd
+    class main
+    socket agpsd stream 660 gps system
+    socket agpsd2 stream 660 gps inet
+    socket agpsd3 stream 660 gps inet
+    user gps
+    group gps radio inet sdcard_r sdcard_rw misc system
+
+service slpd /vendor/bin/slpd
+    class main
+    user gps
+    group gps inet
+
 # Wlan
 service wifi2agps /vendor/bin/wifi2agps
     class main
@@ -92,7 +115,7 @@ service wifi2agps /vendor/bin/wifi2agps
 service p2p_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf -N \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -dd \
+    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
@@ -105,7 +128,7 @@ service p2p_supplicant /system/bin/wpa_supplicant \
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -dd \
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
