--- a/rootdir/init.modem.rc
+++ b/rootdir/init.modem.rc
@@ -3,14 +3,29 @@
 # IMPORTANT: Do not create world writable files or directories.
 # This is a common source of Android security bugs.
 #
-   
+
+on early-init
+    write /sys/class/net/ccmni0/queues/rx-0/rps_cpus "ff"
+    write /sys/class/net/ccmni1/queues/rx-0/rps_cpus "ff"
+    write /sys/class/net/ccmni2/queues/rx-0/rps_cpus "ff"
+    write /sys/class/net/ccmni0/queues/rx-0/rps_flow_cnt "1000"
+    write /sys/class/net/ccmni1/queues/rx-0/rps_flow_cnt "1000"
+    write /sys/class/net/ccmni2/queues/rx-0/rps_flow_cnt "1000"
+    setprop net.perf.tether.rps 0f
+    setprop net.perf.rps.default ff
+    setprop net.perf.tether.cpu.core 4,4,0,0
+    setprop net.perf.tether.cpu.freq 1183000,1638000,0,0
+    setprop net.perf.internal.cpu.core 4,4,0,0
+    setprop net.perf.internal.cpu.freq -1,-1,-1,-1
+
 on post-fs-data
 
     write /proc/bootprof "post-fs-data: on modem start"
 
     # Modem related device nodes
     mkdir /data/nvram/md  0770 root system
-
+    mkdir /data/nvram/md3  0770 root system
+    mkdir /data/md3	0770 root system
 #  Build-in Modified - S
 #    insmod /vendor/lib/modules/ccci_plat.ko
 #    insmod /vendor/lib/modules/ccci.ko
@@ -23,8 +38,7 @@ on post-fs-data
     restorecon /data/ccci_cfg
     restorecon_recursive /protect_f
     restorecon_recursive /protect_s
-    
-    # Encrypt phone function
+# Encrypt phone function
     setprop vold.post_fs_data_done 1
 
 service gsm0710muxd /vendor/bin/gsm0710muxd -s /dev/ttyC0 -f 512 -n 8 -m basic
@@ -64,10 +78,9 @@ service ril-daemon-mtk /vendor/bin/mtkrild
     socket rild-mal stream 660 radio system
     socket rild-mal-at stream 660 radio system
     socket rild-vsim stream 660 root radio
-    socket sap_uim_socket1 stream 660 radio radio
-    socket sap_uim_socket2 stream 660 radio radio
-    socket sap_uim_socket3 stream 660 radio radio
-    socket sap_uim_socket4 stream 660 radio radio
+    socket rild-mbim stream 660 root radio
+    socket sap_uim_socket1 stream 660 bluetooth bluetooth
+    socket sap_uim_socket2 stream 660 bluetooth bluetooth
     user root
     group radio cache inet misc audio sdcard_r sdcard_rw log system
     disabled
@@ -85,8 +98,8 @@ service ril-daemon-mtkmd2 /vendor/bin/mtkrildmd2
     socket rild-atci-md2 stream 660 root radio
     socket rild-vsim-md2 stream 660 root radio
     socket rild-mal-md2 stream 660 radio system
-    socket rild-mal-at-md2 stream 660 radio system
     socket rild-vsim-md2 stream 660 root radio
+    socket rild-mbim-md2 stream 660 root radio
     user root
     group radio cache inet misc audio sdcard_r sdcard_rw log system
     disabled
@@ -94,6 +107,22 @@ service ril-daemon-mtkmd2 /vendor/bin/mtkrildmd2
 
 service md_minilog_util /vendor/bin/md_minilog_util
     user radio
+    disabled
+    oneshot
+
+#VIA RILD service
+service viarild /vendor/bin/viarild -l /vendor/lib/libviatelecom-withuim-ril.so -- -d /dev/ttySDIO4
+    class core
+    socket rild-via stream 660 radio radio
+    socket msap_c2k_socket1 stream 660 radio radio
+    socket msap_c2k_socket2 stream 660 radio radio
+    socket msap_c2k_socket3 stream 660 radio radio
+    socket msap_c2k_socket4 stream 660 radio radio
+    socket rpc stream 660 radio system
+    socket rildc-debug stream 660 radio system
+    socket rild-ctclient stream 660 radio system
+    socket rild-atci-c2k stream 660 radio system
+    group radio cache inet misc audio sdcard_r sdcard_rw log system
     disabled
     oneshot
 
@@ -114,6 +143,18 @@ service ccci_fsd /vendor/bin/ccci_fsd 0
     oneshot
 
 service ccci_mdinit /vendor/bin/ccci_mdinit 0
+    user system
+    group radio system
+    class core
+    oneshot
+
+service ccci3_fsd /vendor/bin/ccci_fsd 2
+    user radio
+    group  radio system
+    class core
+    oneshot
+
+service ccci3_mdinit /vendor/bin/ccci_mdinit 2
     user system
     group radio system
     class core
