--- a/rootdir/init.project.rc
+++ b/rootdir/init.project.rc
@@ -1,28 +1,12 @@
 # MTK project .rc configure
 
-import init.mt6735.usb.rc
+import init.mt6739.usb.rc
 
 on init
     mkdir /mnt/media_rw/usbotg 0700 media_rw media_rw
     mkdir /storage/usbotg 0700 root root
 
 on post-fs-data
-
-
-
-
-#   insmod /vendor/lib/modules/mtk_hif_sdio.ko
-#   insmod /vendor/lib/modules/mtk_stp_wmt.ko
-#   insmod /vendor/lib/modules/mtk_stp_uart.ko
-#   insmod /vendor/lib/modules/mtk_stp_gps.ko
-#   insmod /vendor/lib/modules/mtk_stp_bt.ko
-#   insmod /vendor/lib/modules/mtk_fm_drv.ko
-#   insmod /vendor/lib/modules/mtk_wmt_wifi.ko
-
-
-
-
-
 
 #Camera
     chmod 0660 /dev/MAINAF
@@ -40,31 +24,19 @@ on post-fs-data
     chmod 0660 /dev/DW9714AF
     chown system camera /dev/DW9714AF
 
-    chmod 0660 /dev/AD5820AF
-    chown system camera /dev/AD5820AF
+    chmod 0660 /dev/LC898212AF
+    chown system camera /dev/LC898212AF
 
-	chmod 0660 /dev/BU64745GWZAF
+    chmod 0660 /dev/BU64745GWZAF
     chown system camera /dev/BU64745GWZAF
 
 #SMB
     chown system system /proc/smb/ScreenComm
     chmod 0660 /proc/smb/ScreenComm
 
+    chmod 0660 /dev/spm
+    chown system system /dev/spm
 
-
-
-#Define device for ATCID
-    chmod 660 /dev/ttyGS0
-    chown system /dev/ttyGS0
-    chmod 660 /dev/ttyGS1
-    chown system /dev/ttyGS1
-
-#   insmod /vendor/lib/modules/wlan_mt.ko
-
-
-
-
-    chmod 0666 /dev/exm0
 
 on init
     # Refer to http://source.android.com/devices/tech/storage/index.html
@@ -80,37 +52,9 @@ service fuse_usbotg /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/
     class late_start
     disabled
 
-
-service atci_service /vendor/bin/atci_service
-	socket atci-service stream 660 radio system
-	socket atci-serv-fw stream 660 radio system
-	user root
-        disabled
-	group radio system
-service atcid-daemon-u /vendor/bin/atcid
-	user system
-	group radio system media
-	disabled
-	oneshot
-
-service atcid-daemon-e /vendor/bin/atcid
-	user root
-	group radio system
-	disabled
-	oneshot
-
-on early_property:ro.build.type=eng
-start atci_service
-start atcid-daemon-e
-service audio-daemon /vendor/bin/audiocmdservice_atci
-    class main
-    socket atci-audio stream 660 media system
-    user media
-    group nvram media system sdcard_rw
-    disabled
+service spm_script /vendor/bin/spm_loader
+    user system
+    group system
+    class core
     oneshot
-
-
-
-
 
